Get free position for booking
