# src/main/resources/api.yaml
@@ -280,6 +280,43 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /positions/{id}:
+    get:
+      summary: Get representation of position
+      operationId: getPosition
+      tags:
+        - office
+      parameters:
+        - in: header
+          name: X-Token
+          schema:
+            type: string
+          required: true
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: Done
+          content:
+            image/png:
+              schema:
+                type: string
+                format: byte
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '500':
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /positions:
     post:
       summary: Set positions by uploading map
@@ -332,6 +369,8 @@ components:
         position:
           type: integer
           format: int32
+        positionPicture:
+          type: string
     StatusResponse:
       type: object
       required:
